<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_place_order"
        android:title="@string/action_create"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_print_accounting_charge_sheet"
        android:title="@string/action_print_accounting_charge_sheet"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_save_as_draft"
        android:title="@string/action_save_as_draft"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete_order"
        android:title="@string/action_delete_order"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_cancel"
        android:title="@string/action_cancel"
        app:showAsAction="never" />

</menu>