<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.LoginFragment">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:adjustViewBounds="true"
        android:src="@drawable/ic_o_grill"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lbl_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/block_margin_1"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:layout_marginRight="@dimen/default_margin"
        android:hint="@string/nom"
        app:layout_constraintEnd_toStartOf="@+id/lbl_phone_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_logo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textSize="@dimen/text_size_small" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lbl_phone_number"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/block_margin_1"
        android:layout_marginEnd="@dimen/default_margin"
        android:hint="@string/hint_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_logo"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".35">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:textSize="@dimen/text_size_small" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lbl_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/block_margin_1"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:layout_marginRight="@dimen/default_margin"
        android:hint="@string/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_phone_number">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textSize="@dimen/text_size_small" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lbl_open_id"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/block_margin_1"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:layout_marginRight="@dimen/default_margin"
        android:hint="@string/code_pin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_open_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="4"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="@dimen/text_size_small" />

    </com.google.android.material.textfield.TextInputLayout>



    <Button
        android:id="@+id/btn_register"
        style="@style/ButtonPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/block_margin_1"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:layout_marginRight="@dimen/default_margin"
        android:text="@string/enregistrer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_open_id" />


    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

<!--    <TextView-->
<!--        android:id="@+id/textViewLoginNow"-->
<!--        style="@style/TextDefault"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginBottom="32dp"-->
<!--        android:text="@string/already_have_an_account_login_now"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent" />-->


</androidx.constraintlayout.widget.ConstraintLayout>